FrontEnd/src/parseStuff/ParseStuffParser.java
// Generated from C:/Users/EdSnow/IdeaProjects/Sequent/FrontEnd/src/parseStuff\ParseStuff.g4 by ANTLR 4.7
package parseStuff;

//  from Term.g4
    import org.antlr.v4.runtime.Parser;
    import term.*;
    import p_term.*;
    import formula.*;
    import p_formula.*;
	import p_axiomatization.*;
    import parseStuff.formulaBuilder.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ParseStuffParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		Conjunction_connective=18, Disjunction_connective=19, Negation_connective=20, 
		Conditional_connective=21, Biconditional_connective=22, Qualification_sign=23, 
		Identifier=24, Whitespace=25, Union_operator=26, Intersection_operator=27, 
		Successor_operator=28, Addition_operator=29, Multiplication_operator=30, 
		Empty_set=31, Zero=32, Natural_numbers_origin_zero=33, Natural_numbers_origin_one=34, 
		ErrorCharacter=35;
	public static final int
		RULE_sformula = 0, RULE_axiomatization = 1, RULE_formula = 2, RULE_implication = 3, 
		RULE_disjunction = 4, RULE_conjunction = 5, RULE_atom = 6, RULE_proposition = 7, 
		RULE_predicate_application = 8, RULE_negation = 9, RULE_relation = 10, 
		RULE_quantified_formula = 11, RULE_quantified_variable = 12, RULE_term = 13, 
		RULE_product = 14, RULE_particle = 15, RULE_term_variable = 16, RULE_function_application = 17, 
		RULE_successor_application = 18, RULE_variable = 19, RULE_applicand = 20;
	public static final String[] ruleNames = {
		"sformula", "axiomatization", "formula", "implication", "disjunction", 
		"conjunction", "atom", "proposition", "predicate_application", "negation", 
		"relation", "quantified_formula", "quantified_variable", "term", "product", 
		"particle", "term_variable", "function_application", "successor_application", 
		"variable", "applicand"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'\u2208'", "'\u2286'", "'='", "'\u2260'", "'!='", 
		"'<'", "'\u2264'", "'<='", "'>'", "'\u2265'", "'>='", "'.'", "'\u2200'", 
		"'\u2203'", "','", null, null, null, null, null, "'|'", null, null, "'\u222A'", 
		"'\u2229'", "'/S'", "'+'", null, "'\u2205'", "'0'", "'\u2115'", "'\u2115\u207A'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "Conjunction_connective", "Disjunction_connective", 
		"Negation_connective", "Conditional_connective", "Biconditional_connective", 
		"Qualification_sign", "Identifier", "Whitespace", "Union_operator", "Intersection_operator", 
		"Successor_operator", "Addition_operator", "Multiplication_operator", 
		"Empty_set", "Zero", "Natural_numbers_origin_zero", "Natural_numbers_origin_one", 
		"ErrorCharacter"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ParseStuff.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParseStuffParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SformulaContext extends ParserRuleContext {
		public P_SFormula f;
		public Token t;
		public P_Axiomatization a;
		public SformulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sformula; }
	 
		public SformulaContext() { }
		public void copyFrom(SformulaContext ctx) {
			super.copyFrom(ctx);
			this.f = ctx.f;
			this.t = ctx.t;
			this.a = ctx.a;
		}
	}
	public static class SFormula_type_formulaContext extends SformulaContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public SFormula_type_formulaContext(SformulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterSFormula_type_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitSFormula_type_formula(this);
		}
	}
	public static class SFormula_type_axiomatizationContext extends SformulaContext {
		public AxiomatizationContext axiomatization() {
			return getRuleContext(AxiomatizationContext.class,0);
		}
		public SFormula_type_axiomatizationContext(SformulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterSFormula_type_axiomatization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitSFormula_type_axiomatization(this);
		}
	}

	public final SformulaContext sformula() throws RecognitionException {
		SformulaContext _localctx = new SformulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sformula);
		try {
			setState(45);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new SFormula_type_axiomatizationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				if (!((_localctx.t=_input.LT(1)).getType()==Identifier && (_localctx.a=P_Axiomatization$.MODULE$.lookupAxiomatization(_localctx.t.getText()))!=null)) throw new FailedPredicateException(this, "($t=_input.LT(1)).getType()==Identifier && ($a=P_Axiomatization$.MODULE$.lookupAxiomatization($t.getText()))!=null");
				setState(43);
				axiomatization();
				}
				break;
			case 2:
				_localctx = new SFormula_type_formulaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				formula();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxiomatizationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(ParseStuffParser.Identifier, 0); }
		public AxiomatizationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiomatization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAxiomatization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAxiomatization(this);
		}
	}

	public final AxiomatizationContext axiomatization() throws RecognitionException {
		AxiomatizationContext _localctx = new AxiomatizationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_axiomatization);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public Formula f;
		public ImplicationContext implication() {
			return getRuleContext(ImplicationContext.class,0);
		}
		public TerminalNode Biconditional_connective() { return getToken(ParseStuffParser.Biconditional_connective, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			implication();
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(50);
				match(Biconditional_connective);
				setState(51);
				formula();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplicationContext extends ParserRuleContext {
		public Formula f;
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public TerminalNode Conditional_connective() { return getToken(ParseStuffParser.Conditional_connective, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public ImplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implication; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterImplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitImplication(this);
		}
	}

	public final ImplicationContext implication() throws RecognitionException {
		ImplicationContext _localctx = new ImplicationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_implication);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			disjunction();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Conditional_connective) {
				{
				setState(55);
				match(Conditional_connective);
				setState(56);
				formula();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjunctionContext extends ParserRuleContext {
		public Formula f;
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<TerminalNode> Disjunction_connective() { return getTokens(ParseStuffParser.Disjunction_connective); }
		public TerminalNode Disjunction_connective(int i) {
			return getToken(ParseStuffParser.Disjunction_connective, i);
		}
		public DisjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterDisjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitDisjunction(this);
		}
	}

	public final DisjunctionContext disjunction() throws RecognitionException {
		DisjunctionContext _localctx = new DisjunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_disjunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			conjunction();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Disjunction_connective) {
				{
				{
				setState(60);
				match(Disjunction_connective);
				setState(61);
				conjunction();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public Formula f;
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<TerminalNode> Conjunction_connective() { return getTokens(ParseStuffParser.Conjunction_connective); }
		public TerminalNode Conjunction_connective(int i) {
			return getToken(ParseStuffParser.Conjunction_connective, i);
		}
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitConjunction(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conjunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			atom();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Conjunction_connective) {
				{
				{
				setState(68);
				match(Conjunction_connective);
				setState(69);
				atom();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public Formula f;
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
			this.f = ctx.f;
		}
	}
	public static class Atom_type_relationContext extends AtomContext {
		public RelationContext relation() {
			return getRuleContext(RelationContext.class,0);
		}
		public Atom_type_relationContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAtom_type_relation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAtom_type_relation(this);
		}
	}
	public static class Atom_type_predicateContext extends AtomContext {
		public Predicate_applicationContext predicate_application() {
			return getRuleContext(Predicate_applicationContext.class,0);
		}
		public Atom_type_predicateContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAtom_type_predicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAtom_type_predicate(this);
		}
	}
	public static class Atom_type_propositionContext extends AtomContext {
		public PropositionContext proposition() {
			return getRuleContext(PropositionContext.class,0);
		}
		public Atom_type_propositionContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAtom_type_proposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAtom_type_proposition(this);
		}
	}
	public static class Atom_type_negationContext extends AtomContext {
		public NegationContext negation() {
			return getRuleContext(NegationContext.class,0);
		}
		public Atom_type_negationContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAtom_type_negation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAtom_type_negation(this);
		}
	}
	public static class Atom_type_quantifiedContext extends AtomContext {
		public Quantified_formulaContext quantified_formula() {
			return getRuleContext(Quantified_formulaContext.class,0);
		}
		public Atom_type_quantifiedContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAtom_type_quantified(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAtom_type_quantified(this);
		}
	}
	public static class Atom_type_formulaContext extends AtomContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public Atom_type_formulaContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterAtom_type_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitAtom_type_formula(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atom);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new Atom_type_formulaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(T__0);
				setState(76);
				formula();
				setState(77);
				match(T__1);
				}
				break;
			case 2:
				_localctx = new Atom_type_propositionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				proposition();
				}
				break;
			case 3:
				_localctx = new Atom_type_predicateContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				predicate_application();
				}
				break;
			case 4:
				_localctx = new Atom_type_negationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				negation();
				}
				break;
			case 5:
				_localctx = new Atom_type_relationContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				relation();
				}
				break;
			case 6:
				_localctx = new Atom_type_quantifiedContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				quantified_formula();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropositionContext extends ParserRuleContext {
		public Formula f;
		public P_Proposition p;
		public Token Identifier;
		public TerminalNode Identifier() { return getToken(ParseStuffParser.Identifier, 0); }
		public PropositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterProposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitProposition(this);
		}
	}

	public final PropositionContext proposition() throws RecognitionException {
		PropositionContext _localctx = new PropositionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_proposition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			((PropositionContext)_localctx).Identifier = match(Identifier);
			setState(87);
			if (!((_localctx.p=P_Formula$.MODULE$.lookupProposition(((PropositionContext)_localctx).Identifier.getText()))!=null)) throw new FailedPredicateException(this, "($p=P_Formula$.MODULE$.lookupProposition($Identifier.getText()))!=null", "axiomatization not permitted");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Predicate_applicationContext extends ParserRuleContext {
		public Formula f;
		public TerminalNode Identifier() { return getToken(ParseStuffParser.Identifier, 0); }
		public ApplicandContext applicand() {
			return getRuleContext(ApplicandContext.class,0);
		}
		public Predicate_applicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate_application; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterPredicate_application(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitPredicate_application(this);
		}
	}

	public final Predicate_applicationContext predicate_application() throws RecognitionException {
		Predicate_applicationContext _localctx = new Predicate_applicationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_predicate_application);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(Identifier);
			setState(90);
			applicand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegationContext extends ParserRuleContext {
		public Formula f;
		public TerminalNode Negation_connective() { return getToken(ParseStuffParser.Negation_connective, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public NegationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterNegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitNegation(this);
		}
	}

	public final NegationContext negation() throws RecognitionException {
		NegationContext _localctx = new NegationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_negation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(Negation_connective);
			setState(93);
			atom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public Formula f;
		public P_Predicate p;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParseStuffListener ) ((ParseStuffListener)listener).exitRelation(this);
		}
	}
